<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollableTabContent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <TextView
        android:id="@+id/about_krakow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:paddingBottom="5dp"
        android:background="@drawable/clickable_panel_background"
        android:drawableTop="@drawable/im_about_krakow"
        android:drawableRight="@drawable/ic_arrow_right"
        android:drawablePadding="3dp"
        android:text="@string/about_krakow"
        android:clickable="true"
        android:onClick="onClickAboutKrakow">
    </TextView>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/background_light">
    </View>
    
    <TextView
        android:id="@+id/airport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:paddingBottom="5dp"
        android:background="@drawable/clickable_panel_background"
        android:drawableTop="@drawable/im_airport"
        android:drawableRight="@drawable/ic_arrow_right"
        android:drawablePadding="3dp"
        android:text="@string/airport"
        android:clickable="true">
    </TextView>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/background_light">
    </View>
    
    <TextView
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:paddingBottom="5dp"
        android:background="@drawable/clickable_panel_background"
        android:drawableTop="@drawable/im_weather"
        android:drawableRight="@drawable/ic_arrow_right"
        android:drawablePadding="3dp"
        android:text="@string/weather"
        android:clickable="true">
    </TextView>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/background_light">
    </View>
    
    <TextView
        android:id="@+id/money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:paddingBottom="5dp"
        android:background="@drawable/clickable_panel_background"
        android:drawableTop="@drawable/im_money"
        android:drawableRight="@drawable/ic_arrow_right"
        android:drawablePadding="3dp"
        android:text="@string/money"
        android:clickable="true">
    </TextView>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/background_light">
    </View>
    
    <TextView
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:paddingBottom="5dp"
        android:background="@drawable/clickable_panel_background"
        android:drawableTop="@drawable/im_language"
        android:drawableRight="@drawable/ic_arrow_right"
        android:drawablePadding="3dp"
        android:text="@string/language"
        android:clickable="true">
    </TextView>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/background_light">
    </View>
    
    <TextView
        android:id="@+id/hotels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:paddingBottom="5dp"
        android:background="@drawable/clickable_panel_background"
        android:drawableTop="@drawable/im_hotels"
        android:drawableRight="@drawable/ic_arrow_right"
        android:drawablePadding="3dp"
        android:text="@string/hotels"
        android:clickable="true">
    </TextView>
</LinearLayout>
